--- a/android.tree_mapper/app/src/main/res/values-ru/strings.xml
+++ b/android.tree_mapper/app/src/main/res/values-ru/strings.xml
@@ -28,4 +28,5 @@
     <string name="email_not_valid">Неверный адрес электронной почты</string>
     <string name="error_sign_up">Sign up failed</string>
     <string name="signing_up">Signing up...</string>
+    <string name="first_run">First run</string>
 </resources>
