--- a/android.tree_mapper/app/src/main/res/values/strings.xml
+++ b/android.tree_mapper/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="email_not_valid">E-mail is not valid</string>
     <string name="error_sign_up">Sign up failed</string>
     <string name="signing_up">Signing up...</string>
+    <string name="first_run">First run</string>
 </resources>
