--- a/android.tree_mapper/app/src/main/res/values/strings.xml
+++ b/android.tree_mapper/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="app_description">The tree mapping application for cities. \nDesign by Alexander Kalashnikov (Urbica design), developing by Dmitry Baryshnikov (NextGIS). \nApplication concept created via ecohackathone ENTER 2016, Prague.</string>
     <string name="copyright" translatable="false"><![CDATA[Copyright © <a href=\\\"http://nextgis.com\\\">NextGIS</a>, 2016]]></string>
     <string name="action_about">About</string>
+    <string name="state">Status</string>
+    <string name="girth">Tree girth</string>
+    <string name="age">Age</string>
+    <string name="height">Height</string>
 </resources>
