Add permissions check, fix #2

--- a/android.tree_mapper/app/src/main/res/values-ru/strings.xml
+++ b/android.tree_mapper/app/src/main/res/values-ru/strings.xml
@@ -50,5 +50,5 @@
     <string name="back">Назад</string>
     <string name="finish">Готово</string>
     <string name="message_important">Важно</string>
-    <string name="message_need_permissions">Для корректной работы необходимо дать разрешения приложению в настройкх системы</string>
+    <string name="message_need_permissions">Для корректной работы необходимо дать разрешения приложению для GPS, памяти устройства и аккаунтов.</string>
 </resources>
