--- a/android.tree_mapper/app/src/main/res/values/strings.xml
+++ b/android.tree_mapper/app/src/main/res/values/strings.xml
@@ -52,5 +52,5 @@
     <string name="back">Back</string>
     <string name="finish">Finish</string>
     <string name="message_important">Important</string>
-    <string name="message_need_permissions">To work properly the application need permissions to be set in system preferences</string>
+    <string name="message_need_permissions">To work properly the application needs permissions to be set for GPS, external storage and accounts.</string>
 </resources>
