Add VK auth, #1

--- a/android.tree_mapper/app/src/main/res/values/strings.xml
+++ b/android.tree_mapper/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
   -->
 
 <resources>
+    <integer name="com_vk_sdk_AppId">6214371</integer>
     <string name="app_name">Woody</string>
     <string name="email">Email</string>
     <string name="sign_up">Sign up</string>
