--- a/android.tree_mapper/app/src/main/res/values-ru/strings.xml
+++ b/android.tree_mapper/app/src/main/res/values-ru/strings.xml
@@ -34,7 +34,7 @@
     <string name="look_for_city">Выбор города</string>
     <string name="create_base_map">Создание картподложки</string>
     <string name="error_city_found">Город не найден</string>
-    <string name="success_filled">Данные згружены</string>
+    <string name="success_filled">Данные загружены</string>
     <string name="app_description">Приложение для картирования деревьев в городе.\nДизайн Александра Калашникова (Urbica design), разработка Дмитрия Барышникова (NextGIS).\nКонцепт приложения разработан на экохакатоне ENTER 2016, Прага.</string>
     <string name="action_about">О программе</string>
     <string name="state">Состояние</string>
