--- a/android.tree_mapper/app/src/main/res/values-ru/strings.xml
+++ b/android.tree_mapper/app/src/main/res/values-ru/strings.xml
@@ -52,4 +52,12 @@
     <string name="message_important">Важно</string>
     <string name="message_need_permissions">Для корректной работы необходимо дать разрешения приложению для GPS, памяти устройства и аккаунтов.</string>
     <string name="unsaved_data">Все введенные данные будут потеряны. Продолжить?</string>
+    <string name="injury">Повреждения</string>
+    <string name="placement">Где произрастает</string>
+    <string name="crown_e">Радиус кроны (восток)</string>
+    <string name="crown_n">Радиус кроны (север)</string>
+    <string name="crown_w">Радиус кроны (запад)</string>
+    <string name="crown_s">Радиус кроны (юг)</string>
+    <string name="crown_begin">Начало формирования кроны</string>
+    <string name="params_for_experts">Параметры для экпертов</string>
 </resources>
